--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 Multichase - a pointer chaser benchmark
 Multiload - a superset of multichase which runs latency, memory bandwidth, and loaded-latency
 
+* About this fork of multichase
+This fork of multichase adds the ability to test DAX memory, which could be
+any non-standard memory including nvdimm and CXL memory.
+
+* Back to the original content...
+
 1/ BUILD
 
    - just type:
